--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -1271,7 +1271,7 @@
                                           <component id="46ded" class="javax.swing.JTextArea" binding="DescriptionforCourseMaterial">
                                             <constraints/>
                                             <properties>
-                                              <editable value="false"/>
+                                              <editable value="true"/>
                                               <font size="14"/>
                                               <lineWrap value="true"/>
                                               <margin top="10" left="10" bottom="10" right="10"/>
@@ -1915,7 +1915,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="ad371" class="javax.swing.JTextField" binding="textField3" default-binding="true">
+                                          <component id="ad371" class="javax.swing.JTextField" binding="LECMarkTGno">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -1935,7 +1935,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="cb016" class="javax.swing.JTextField" binding="textField4" default-binding="true">
+                                          <component id="cb016" class="javax.swing.JTextField" binding="LECMarkQuiz1">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -1955,7 +1955,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="a5f4" class="javax.swing.JTextField" binding="textField5" default-binding="true">
+                                          <component id="a5f4" class="javax.swing.JTextField" binding="LECMarkQuiz2">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -1975,7 +1975,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="99c3d" class="javax.swing.JTextField" binding="textField6" default-binding="true">
+                                          <component id="99c3d" class="javax.swing.JTextField" binding="LECMarkQuiz3">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -1993,7 +1993,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="844d4" class="javax.swing.JTextField" binding="textField10" default-binding="true">
+                                          <component id="844d4" class="javax.swing.JTextField" binding="LECMarkQuiz4">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -2011,7 +2011,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="cc868" class="javax.swing.JTextField" binding="textField11" default-binding="true">
+                                          <component id="cc868" class="javax.swing.JTextField" binding="LECMarkAssess1">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -2029,7 +2029,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="fc137" class="javax.swing.JTextField" binding="textField12" default-binding="true">
+                                          <component id="fc137" class="javax.swing.JTextField" binding="LECMarkAssess2">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -2047,7 +2047,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="ff262" class="javax.swing.JTextField" binding="textField13" default-binding="true">
+                                          <component id="ff262" class="javax.swing.JTextField" binding="LECMarkMid">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -2065,7 +2065,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="63032" class="javax.swing.JTextField" binding="theory_field">
+                                          <component id="63032" class="javax.swing.JTextField" binding="LECMarkFTheory">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
@@ -2083,7 +2083,7 @@
                                         <properties/>
                                         <border type="none"/>
                                         <children>
-                                          <component id="9dca6" class="javax.swing.JTextField" binding="practical_field">
+                                          <component id="9dca6" class="javax.swing.JTextField" binding="LECMarkFPractical">
                                             <constraints>
                                               <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
                                                 <preferred-size width="150" height="-1"/>
