--- a/System/TecSys/src/HomePage/LecturerHomePage.form
+++ b/System/TecSys/src/HomePage/LecturerHomePage.form
@@ -2595,7 +2595,7 @@
                                       <font size="16"/>
                                     </properties>
                                   </component>
-                                  <component id="ea0d6" class="javax.swing.JButton" binding="showStudentGradeButton" default-binding="true">
+                                  <component id="ea0d6" class="javax.swing.JButton" binding="enterButton">
                                     <constraints>
                                       <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                     </constraints>
@@ -2616,7 +2616,7 @@
                             <properties/>
                             <border type="none"/>
                             <children>
-                              <grid id="56f2b" layout-manager="GridLayoutManager" row-count="1" column-count="11" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+                              <grid id="56f2b" layout-manager="GridLayoutManager" row-count="1" column-count="2" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                 <margin top="0" left="0" bottom="0" right="0"/>
                                 <constraints>
                                   <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
@@ -2624,98 +2624,16 @@
                                 <properties/>
                                 <border type="none"/>
                                 <children>
-                                  <component id="96eef" class="javax.swing.JLabel">
-                                    <constraints>
-                                      <grid row="0" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="CGPA :"/>
-                                    </properties>
-                                  </component>
-                                  <component id="87b79" class="javax.swing.JLabel" binding="lblCGPA">
-                                    <constraints>
-                                      <grid row="0" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="Label"/>
-                                    </properties>
-                                  </component>
-                                  <component id="1e40d" class="javax.swing.JLabel">
-                                    <constraints>
-                                      <grid row="0" column="6" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="SGPA :"/>
-                                    </properties>
-                                  </component>
-                                  <component id="1d830" class="javax.swing.JLabel" binding="lblSGPA">
-                                    <constraints>
-                                      <grid row="0" column="7" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="Label"/>
-                                    </properties>
-                                  </component>
-                                  <component id="15fb1" class="javax.swing.JLabel">
-                                    <constraints>
-                                      <grid row="0" column="9" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="Current Class :"/>
-                                    </properties>
-                                  </component>
-                                  <component id="40584" class="javax.swing.JLabel" binding="UGClass">
-                                    <constraints>
-                                      <grid row="0" column="10" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="Label"/>
-                                    </properties>
-                                  </component>
                                   <hspacer id="80d23">
                                     <constraints>
-                                      <grid row="0" column="8" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                   </hspacer>
                                   <hspacer id="3bb11">
                                     <constraints>
-                                      <grid row="0" column="5" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="1" hsize-policy="6" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
                                     </constraints>
                                   </hspacer>
-                                  <component id="1e193" class="javax.swing.JLabel">
-                                    <constraints>
-                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="0" hsize-policy="0" anchor="8" fill="0" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="Student TG_No"/>
-                                    </properties>
-                                  </component>
-                                  <component id="966b4" class="javax.swing.JTextField" binding="studentTGno">
-                                    <constraints>
-                                      <grid row="0" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="6" anchor="8" fill="1" indent="0" use-parent-layout="false">
-                                        <preferred-size width="150" height="-1"/>
-                                      </grid>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                    </properties>
-                                  </component>
-                                  <component id="af29c" class="javax.swing.JButton" binding="enterButton" default-binding="true">
-                                    <constraints>
-                                      <grid row="0" column="2" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="1" indent="0" use-parent-layout="false"/>
-                                    </constraints>
-                                    <properties>
-                                      <font size="16"/>
-                                      <text value="Enter"/>
-                                    </properties>
-                                  </component>
                                 </children>
                               </grid>
                             </children>
