--- a/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
+++ b/System/TecSys/src/HomePage/TechnicalOfficerHomePage.form
@@ -691,7 +691,9 @@
                                   <grid id="169cb" binding="HomePageUserProfile" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
                                     <margin top="0" left="0" bottom="0" right="0"/>
                                     <constraints>
-                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false"/>
+                                      <grid row="0" column="0" row-span="1" col-span="1" vsize-policy="3" hsize-policy="3" anchor="0" fill="3" indent="0" use-parent-layout="false">
+                                        <minimum-size width="250" height="250"/>
+                                      </grid>
                                     </constraints>
                                     <properties>
                                       <background color="-2500135"/>
@@ -1711,13 +1713,7 @@
                                 </constraints>
                                 <properties>
                                   <font size="16"/>
-                                  <model>
-                                    <item value="Semester time table"/>
-                                    <item value="Holiday Announcement"/>
-                                    <item value="Workshop on AI"/>
-                                    <item value="Library Renovation Notice"/>
-                                    <item value="Internship Opportunities"/>
-                                  </model>
+                                  <model/>
                                 </properties>
                               </component>
                               <grid id="1147b" layout-manager="GridLayoutManager" row-count="1" column-count="1" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
